# dynamic-graph-diffusion-net

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  AUTONOMOUS_EXECUTION_REPORT.md  AUTONOMOUS_EXECUTION_STATUS_FINAL.md  AUTONOMOUS_SDLC_COMPLETION_REPORT.md  AUTONOMOUS_SDLC_v5_COMPLETION_REPORT.md  BACKLOG.md  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  Dockerfile.production  FINAL_AUTONOMOUS_SDLC_COMPLETION_REPORT.md  IMPLEMENTATION_COMPLETE.md  Makefile  PRODUCTION_READINESS_REPORT.md  PROJECT_CHARTER.md  README.md  RESEARCH_PAPER_MTGL.md  RESEARCH_ROADMAP.md  SECURITY.md  TERRAGON_AUTONOMOUS_EXECUTION_REPORT.md  TERRAGON_AUTONOMOUS_SDLC_FINAL_COMPLETION.json  TERRAGON_AUTONOMOUS_SDLC_FINAL_REPORT.md  TERRAGON_SDLC_COMPLETION_REPORT.md  TERRAGON_SDLC_v4_1_COMPLETION_REPORT.md  TERRAGON_SDLC_v4_COMPLETION_REPORT.md  adaptive_systems_validation.py  autonomous_dgdn_demo.py  comprehensive_quality_gates.py  comprehensive_quality_gates_final.py  comprehensive_quality_gates_final_report.json  comprehensive_quality_gates_report.json  (+86 more)
.devcontainer/: devcontainer.json  setup.sh
.github/: project-metrics.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.security/: bandit.yml  dependency-check.yml
.terragon/: config.yaml  implementation-summary.md  value-metrics.json
benchmarks/: __init__.py  benchmark_suite.py
deployment/configs/: production.yaml
deployment/docker/: Dockerfile  docker-compose.yml
deployment/kubernetes/: dgdn-deployment.yaml  dgdn-service.yaml
deployment/scripts/: deploy.sh
deployment/terraform/: main.tf  variables.tf
dgdn_env/: pyvenv.cfg
docs/: GLOBAL_DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MATHEMATICAL_FORMULATIONS.md  README.md  ROADMAP.md  SETUP_REQUIRED.md
docs/adr/: 0000-template.md  0001-variational-diffusion-architecture.md
docs/api/: README.md
docs/deployment/: production.md
docs/testing/: README.md
docs/workflows/: README.md  benchmark-workflow-template.yml  ci-workflow-template.yml  release-workflow-template.yml  security-workflow-template.yml
examples/: basic_usage.py  demo.py  global_first_demo.py  performance_benchmark.py  research_showcase.py
k8s/: deployment.yaml  hpa.yaml  service.yaml
monitoring/: README.md  docker-compose.monitoring.yml  prometheus.yml
monitoring/grafana/: dgdn-dashboard.json
monitoring/grafana/dashboards/: dgdn-dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: collect_metrics.py  generate_benchmark_summary.py  security-scan.py  update_dependencies.py  value-discovery.py
src/dgdn/: __init__.py  attention.py  diffusion.py  model.py  temporal_graph.py
src/dgdn/adaptive/: __init__.py  deployment.py  learning.py  monitoring.py  optimization.py
src/dgdn/compliance/: __init__.py  ccpa.py  compliance_extended.py  data_protection.py  gdpr.py  global_compliance.py  pdpa.py  privacy_manager.py
src/dgdn/data/: __init__.py  datasets.py  loaders.py
src/dgdn/deployment/: __init__.py  region_manager.py
src/dgdn/distributed/: __init__.py  cloud_native.py  distributed_training.py  edge_computing.py
src/dgdn/enterprise/: __init__.py  deployment.py  monitoring.py  security.py
src/dgdn/i18n/: __init__.py  global_translator.py  locales.py  messages.py  messages_extended.py  translator.py
src/dgdn/i18n/locales/: en.json  es.json  fr.json
src/dgdn/models/: __init__.py  dgdn.py  layers.py
src/dgdn/optimization/: __init__.py  caching.py  computation.py  memory.py  performance.py
src/dgdn/research/: __init__.py  adaptive_diffusion.py  benchmarks.py  causal.py  causal_temporal_discovery.py  comparative_baselines.py  experimental_framework.py  federated_dgdn.py  meta_temporal_learning.py  neuromorphic.py  quantum.py  quantum_dgdn.py
src/dgdn/scaling/: __init__.py  auto_scaling.py  distributed.py  load_balancing.py
src/dgdn/temporal/: __init__.py  diffusion.py  encoding.py
src/dgdn/training/: __init__.py  losses.py  metrics.py  trainer.py
src/dgdn/utils/: __init__.py  config.py  error_handling.py  health_checks.py  logging.py  monitoring.py  security.py  validation.py
test_configs/: custom.yaml  development.yaml  production.yaml  staging.yaml  testing.yaml
tests/: __init__.py  conftest.py  test_dgdn.py  test_import.py
tests/e2e/: __init__.py  test_training_pipeline.py
tests/fixtures/: __init__.py  graph_data.py  model_configs.py
tests/integration/: __init__.py  test_end_to_end.py
tests/performance/: __init__.py  test_benchmarks.py
tests/security/: test_security.py
tests/unit/: test_models.py
tests/utils/: __init__.py  assertions.py  helpers.py
